[gd_scene load_steps=3 format=2]

[ext_resource path="res://sprites/theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/Repassword.gd" type="Script" id=2]

[node name="Repassword" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="BtnVolver" type="Button" parent="."]
margin_left = 35.0
margin_top = 35.0
margin_right = 110.0
margin_bottom = 81.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Volver"
__meta__ = {
"_edit_lock_": true
}

[node name="Titulo" type="Label" parent="."]
margin_left = 250.0
margin_top = 24.0
margin_right = 404.0
margin_bottom = 85.0
rect_scale = Vector2( 2.5, 2.5 )
custom_constants/line_spacing = -5
text = "Cambio de Contraseña"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Subtitulo1" type="Label" parent="."]
margin_left = 76.0
margin_top = 309.0
margin_right = 256.0
margin_bottom = 342.0
rect_scale = Vector2( 2, 2 )
text = "Tu contraseña actual"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="LinPassworsAnt" type="LineEdit" parent="."]
margin_left = 74.0
margin_top = 396.0
margin_right = 370.0
margin_bottom = 442.0
rect_scale = Vector2( 2, 2 )
align = 1
max_length = 32
secret = true
placeholder_text = "Contraseña Actual"
placeholder_alpha = 0.4
caret_blink = true
__meta__ = {
"_edit_lock_": true
}

[node name="Subtitulo2" type="Label" parent="."]
margin_left = 68.0
margin_top = 540.0
margin_right = 305.0
margin_bottom = 573.0
rect_scale = Vector2( 2, 2 )
text = "inventa una nueva contraseña"
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="LinPassworsNew1" type="LineEdit" parent="."]
margin_left = 66.0
margin_top = 627.0
margin_right = 362.0
margin_bottom = 673.0
rect_scale = Vector2( 2, 2 )
align = 1
max_length = 32
secret = true
placeholder_text = "Contraseña Nueva"
placeholder_alpha = 0.4
caret_blink = true
__meta__ = {
"_edit_lock_": true
}

[node name="LinPassworsNew2" type="LineEdit" parent="."]
margin_left = 64.0
margin_top = 738.0
margin_right = 360.0
margin_bottom = 784.0
rect_scale = Vector2( 2, 2 )
align = 1
max_length = 32
secret = true
placeholder_text = "Confirma la Contraseña"
placeholder_alpha = 0.4
caret_blink = true
__meta__ = {
"_edit_lock_": true
}

[node name="BtnLogin" type="Button" parent="."]
margin_left = 153.0
margin_top = 896.0
margin_right = 366.0
margin_bottom = 942.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Cambiar Contraseña"
__meta__ = {
"_edit_lock_": true
}

[node name="Mensaje" type="Label" parent="."]
margin_left = 113.0
margin_top = 1031.0
margin_right = 360.0
margin_bottom = 1123.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.627451, 0.215686, 0.0745098, 1 )
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Reloj" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="pressed" from="BtnVolver" to="." method="_on_BtnVolver_pressed"]
[connection signal="pressed" from="BtnLogin" to="." method="_on_BtnLogin_pressed"]
[connection signal="timeout" from="Reloj" to="." method="_on_Reloj_timeout"]
